runFormatTest(import.meta, ["typescript"], { trailingComma: "es5" });
runFormatTest(import.meta, ["typescript"], { trailingComma: "none" });
runFormatTest(import.meta, ["typescript"], { trailingComma: "all" });
