// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function-rest-trailing-comma.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
declare function foo(...args: any[], )
declare function foo(...long_long_long_long_long_long_long_long_long_long_long_long_long_long_long_args: any[], )

=====================================output=====================================
declare function foo(...args: any[]);
declare function foo(
  ...long_long_long_long_long_long_long_long_long_long_long_long_long_long_long_args: any[]
);

================================================================================
`;

exports[`function-rest-trailing-comma.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
declare function foo(...args: any[], )
declare function foo(...long_long_long_long_long_long_long_long_long_long_long_long_long_long_long_args: any[], )

=====================================output=====================================
declare function foo(...args: any[]);
declare function foo(
  ...long_long_long_long_long_long_long_long_long_long_long_long_long_long_long_args: any[]
);

================================================================================
`;

exports[`function-rest-trailing-comma.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
declare function foo(...args: any[], )
declare function foo(...long_long_long_long_long_long_long_long_long_long_long_long_long_long_long_args: any[], )

=====================================output=====================================
declare function foo(...args: any[]);
declare function foo(
  ...long_long_long_long_long_long_long_long_long_long_long_long_long_long_long_args: any[]
);

================================================================================
`;
